--- a/abroad/countries.html
+++ b/abroad/countries.html
@@ -11,9 +11,9 @@
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="images/abroad.png" type="image/x-icon">
 
-  <title>Viseas</title>
+  <title>Abroad Migration & Europe Consult Pvt. Ltd.</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -30,7 +30,7 @@
   <link href="css/responsive.css" rel="stylesheet" />
 </head>
 
-<body class="sub_page">
+<body>
   <div class="hero_area">
     <!-- header section strats -->
     <div class="hero_bg_box">
@@ -46,19 +46,19 @@
             <a href="" class="contact_link1">
               <i class="fa fa-map-marker" aria-hidden="true"></i>
               <span>
-                Lorem ipsum dolor sit amet,
+                Maitighar Mandala Height <br> Kathmandu, Nepal
               </span>
             </a>
             <a href="" class="contact_link2">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-                Call : +01 1234567890
+                Call : 01-5220178
               </span>
             </a>
             <a href="" class="contact_link3">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>
-                demo@gmail.com
+                migrationtoabroad@gmail.com
               </span>
             </a>
           </div>
@@ -69,7 +69,7 @@
           <nav class="navbar navbar-expand-lg custom_nav-container">
             <a class="navbar-brand" href="index.html">
               <span>
-                Viseas
+                <img src="images/abroad.png" alt="" style="height: 70px; width: 110px;">
               </span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -78,7 +78,7 @@
 
             <div class="collapse navbar-collapse ml-auto" id="navbarSupportedContent">
               <ul class="navbar-nav  ">
-                <li class="nav-item ">
+                <li class="nav-item active">
                   <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
@@ -87,11 +87,14 @@
                 <li class="nav-item">
                   <a class="nav-link" href="about.html"> About</a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                   <a class="nav-link" href="countries.html"> Countries </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html">Contact us</a>
+                </li>
+                <li class="nav-item" style="background-color: #071a52; border-radius: 3px;">
+                  <a class="nav-link" href="contact.html" >Apply Now</a>
                 </li>
               </ul>
             </div>
@@ -100,8 +103,6 @@
       </div>
     </header>
     <!-- end header section -->
-  </div>
-
 
   <!-- country section -->
 
@@ -182,129 +183,129 @@
 
   <!-- end country section -->
 
-  <!-- info section -->
-  <section class="info_section ">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3">
-          <div class="info_logo">
-            <a class="navbar-brand" href="index.html">
-              <span>
-                Viseas
-              </span>
-            </a>
-            <p>
-              Dolor sit amet, consectetur magna aliqua. Ut enim ad minim veniam, quisdotempor incididunt r
-            </p>
-          </div>
+ <!-- info section -->
+ <section class="info_section ">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3">
+        <div class="info_logo">
+          <a class="navbar-brand" href="index.html">
+            <span>
+              <img src="images/abroad.png" alt="" style="height: 70px; width: 110px;">
+            </span>
+          </a>
+          <p>
+            We Guide you to the Right Path,
+          </p>
         </div>
-        <div class="col-md-3">
-          <div class="info_links">
-            <h5>
-              Useful Link
-            </h5>
-            <ul>
-              <li>
-                <a href="">
-                  Dolor sit amet, consectetur
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  Magna aliqua. Ut enim ad
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  Minim veniam
-                </a>
-              </li>
-              <li>
-                <a href="">
-                  Quisdotempor incididunt r
-                </a>
-              </li>
-            </ul>
-          </div>
+      </div>
+      <div class="col-md-3">
+        <div class="info_links">
+          <h5>
+            Useful Link
+          </h5>
+          <ul>
+            <li>
+              <a href="">
+                FB: Abroad Migration and Europe Consult Pvt. Ltd.
+              </a>
+            </li>
+            <li>
+              <a href="">
+                Whatsapp: AbroadMigration
+              </a>
+            </li>
+            <li>
+              <a href="">
+                Instagram: AbroadMigration
+              </a>
+            </li>
+            <li>
+              <a href="">
+                Twitter: AbroadMigration
+              </a>
+            </li>
+          </ul>
         </div>
-        <div class="col-md-3">
-          <div class="info_info">
-            <h5>
-              Contact Us
-            </h5>
-          </div>
-          <div class="info_contact">
-            <a href="" class="">
-              <i class="fa fa-map-marker" aria-hidden="true"></i>
-              <span>
-                Lorem ipsum dolor sit amet,
-              </span>
-            </a>
-            <a href="" class="">
-              <i class="fa fa-phone" aria-hidden="true"></i>
-              <span>
-                Call : +01 1234567890
-              </span>
-            </a>
-            <a href="" class="">
-              <i class="fa fa-envelope" aria-hidden="true"></i>
-              <span>
-                demo@gmail.com
-              </span>
-            </a>
-          </div>
+      </div>
+      <div class="col-md-3">
+        <div class="info_info">
+          <h5>
+            Contact Us
+          </h5>
         </div>
-        <div class="col-md-3">
-          <div class="info_form ">
-            <h5>
-              Newsletter
-            </h5>
-            <form action="#">
-              <input type="email" placeholder="Enter your email">
-              <button>
-                Subscribe
-              </button>
-            </form>
-            <div class="social_box">
-              <a href="">
-                <i class="fa fa-facebook" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-twitter" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-youtube" aria-hidden="true"></i>
-              </a>
-              <a href="">
-                <i class="fa fa-instagram" aria-hidden="true"></i>
-              </a>
-            </div>
+        <div class="info_contact">
+          <a href="" class="">
+            <i class="fa fa-map-marker" aria-hidden="true"></i>
+            <span>
+              Maitighar Mandala Height, <br>Kathmandu, Nepal
+            </span>
+          </a>
+          <a href="" class="">
+            <i class="fa fa-phone" aria-hidden="true"></i>
+            <span>
+              Call : 01-520179
+            </span>
+          </a>
+          <a href="" class="">
+            <i class="fa fa-envelope" aria-hidden="true"></i>
+            <span>
+              migrationtoabroad@gmail.com
+            </span>
+          </a>
+        </div>
+      </div>
+      <div class="col-md-3">
+        <div class="info_form ">
+          <h5>
+            Newsletter
+          </h5>
+          <form action="#">
+            <input type="email" placeholder="Enter your email">
+            <button>
+              Subscribe
+            </button>
+          </form>
+          <div class="social_box">
+            <a href="">
+              <i class="fa fa-facebook" aria-hidden="true"></i>
+            </a>
+            <a href="">
+              <i class="fa fa-twitter" aria-hidden="true"></i>
+            </a>
+            <a href="">
+              <i class="fa fa-youtube" aria-hidden="true"></i>
+            </a>
+            <a href="">
+              <i class="fa fa-instagram" aria-hidden="true"></i>
+            </a>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
-  <!-- end info_section -->
+<!-- end info_section -->
 
 
 
 
-  <!-- footer section -->
-  <footer class="container-fluid footer_section">
-    <p>
-      &copy; <span id="displayYear"></span> All Rights Reserved By
-      <a href="https://html.design/">Abroad Migration</a>
-    </p>
-  </footer>
-  <!-- footer section -->
+<!-- footer section -->
+<footer class="container-fluid footer_section">
+  <p>
+    &copy; <span id="displayYear"></span> All Rights Reserved By
+    <a href="https://html.design/">Abroad Migration</a>
+  </p>
+</footer>
+<!-- footer section -->
 
-  <script src="js/jquery-3.4.1.min.js"></script>
-  <script src="js/bootstrap.js"></script>
-  <!-- owl slider -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
-  </script>
-  <script src="js/custom.js"></script>
+<script src="js/jquery-3.4.1.min.js"></script>
+<script src="js/bootstrap.js"></script>
+<!-- owl slider -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
+</script>
+<script src="js/custom.js"></script>
 
 </body>
 
