--- a/abroad/index.html
+++ b/abroad/index.html
@@ -117,8 +117,7 @@
                       Process Faster
                     </h1>
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                      sed do eiusmod magna aliqua. Ut enim ad minim veniam
+                      We Guide You The Right Path,
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn-1"> Read more </a>
@@ -139,8 +138,7 @@
                       Process Faster
                     </h1>
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                      sed do eiusmod magna aliqua. Ut enim ad minim veniam
+                      We Guide You The Right Path,
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn-1"> Read more </a>
@@ -161,8 +159,7 @@
                       Process Faster
                     </h1>
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                      sed do eiusmod magna aliqua. Ut enim ad minim veniam
+                      We Guide You The Right Path,
                     </p>
                     <div class="btn-box">
                       <a href="" class="btn-1"> Read more </a>
@@ -206,7 +203,7 @@
                 Business Visa
               </h6>
               <p>
-                Minima consequatur architecto eaque assumenda ipsam itaque quia eum in doloribus debitis impedit ut minus tenetur corrupti excepturi ullam.
+                Government authorities issue business visas to travelers who intend to conduct permissible business activities and attend meetings that do not constitute labor or employment in a specific country.
               </p>
               <a href="">
                 Read More
@@ -224,7 +221,7 @@
                 Work Visa
               </h6>
               <p>
-                Minima consequatur architecto eaque assumenda ipsam itaque quia eum in doloribus debitis impedit ut minus tenetur corrupti excepturi ullam.
+                A visa is an official stamp in your passport authorizing you to travel, work, or study in that country for a specified length of time. All countries, including the US, require a work permit visa for foreign workers; employers will not hire you without one.
               </p>
               <a href="">
                 Read More
@@ -242,7 +239,7 @@
                 Tourist Visa
               </h6>
               <p>
-                Minima consequatur architecto eaque assumenda ipsam itaque quia eum in doloribus debitis impedit ut minus tenetur corrupti excepturi ullam.
+                Visitor visas are nonimmigrant visas for persons who want to enter the United States temporarily for business (visa category B-1), for tourism (visa category B-2), or for a combination of both purposes (B-1/B-2).
               </p>
               <a href="">
                 Read More
@@ -260,7 +257,7 @@
                 Student Visa
               </h6>
               <p>
-                Minima consequatur architecto eaque assumenda ipsam itaque quia eum in doloribus debitis impedit ut minus tenetur corrupti excepturi ullam.
+                A student visa is a government-issued immigration document granted by a consulate general or embassy, which allows you to legally study in a specific country for a specific date range.
               </p>
               <a href="">
                 Read More
@@ -294,11 +291,7 @@
               </h2>
             </div>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud exercitation ullamco laboris
-              nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-              in reprehenderit in voluptate velit
+              Consulting is defined as the practise of providing a third party with expertise on a matter in exchange for a fee. The service may involve either advisory or implementation services. For the consultant, taking an independent and unbiased stance on an issue is central to his/her role.
             </p>
             <div class="btn-box">
               <a href="">
@@ -459,10 +452,10 @@
                     Mark Evans
                   </h5>
                   <h6>
-                    Magna
+                    Client
                   </h6>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                    A better way to provide constructive feedback would be to say, “I really appreciate what you share when you speak up. I noticed that you don't share your ideas regularly in meetings, but the team needs them. I would like to hear at least one of those ideas at every meeting.”
                   </p>
                 </div>
               </div>
@@ -477,10 +470,10 @@
                     Anthony White
                   </h5>
                   <h6>
-                    Magna
+                    Client
                   </h6>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                    A better way to provide constructive feedback would be to say, “I really appreciate what you share when you speak up. I noticed that you don't share your ideas regularly in meetings, but the team needs them. I would like to hear at least one of those ideas at every meeting.”
                   </p>
                 </div>
               </div>
@@ -495,10 +488,10 @@
                     Mark Evans
                   </h5>
                   <h6>
-                    Magna
+                    Client
                   </h6>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                    A better way to provide constructive feedback would be to say, “I really appreciate what you share when you speak up. I noticed that you don't share your ideas regularly in meetings, but the team needs them. I would like to hear at least one of those ideas at every meeting.”
                   </p>
                 </div>
               </div>
@@ -513,10 +506,10 @@
                     Anthony White
                   </h5>
                   <h6>
-                    Magna
+                    Client
                   </h6>
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                    A better way to provide constructive feedback would be to say, “I really appreciate what you share when you speak up. I noticed that you don't share your ideas regularly in meetings, but the team needs them. I would like to hear at least one of those ideas at every meeting.”
                   </p>
                 </div>
               </div>
@@ -538,11 +531,11 @@
           <div class="info_logo">
             <a class="navbar-brand" href="index.html">
               <span>
-                Viseas
+                <img src="images/abroad.png" alt="" style="height: 70px; width: 110px;">
               </span>
             </a>
             <p>
-              Dolor sit amet, consectetur magna aliqua. Ut enim ad minim veniam, quisdotempor incididunt r
+              We Guide you to the Right Path,
             </p>
           </div>
         </div>
@@ -554,22 +547,22 @@
             <ul>
               <li>
                 <a href="">
-                  Dolor sit amet, consectetur
+                  FB: Abroad Migration and Europe Consult Pvt. Ltd.
                 </a>
               </li>
               <li>
                 <a href="">
-                  Magna aliqua. Ut enim ad
+                  Whatsapp: AbroadMigration
                 </a>
               </li>
               <li>
                 <a href="">
-                  Minim veniam
+                  Instagram: AbroadMigration
                 </a>
               </li>
               <li>
                 <a href="">
-                  Quisdotempor incididunt r
+                  Twitter: AbroadMigration
                 </a>
               </li>
             </ul>
@@ -585,19 +578,19 @@
             <a href="" class="">
               <i class="fa fa-map-marker" aria-hidden="true"></i>
               <span>
-                Lorem ipsum dolor sit amet,
+                Maitighar Mandala Height, <br>Kathmandu, Nepal
               </span>
             </a>
             <a href="" class="">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-                Call : +01 1234567890
+                Call : 01-520179
               </span>
             </a>
             <a href="" class="">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>
-                demo@gmail.com
+                migrationtoabroad@gmail.com
               </span>
             </a>
           </div>
