--- a/abroad/about.html
+++ b/abroad/about.html
@@ -11,9 +11,9 @@
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-  <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="images/abroad.png" type="image/x-icon">
 
-  <title>Viseas</title>
+  <title>Abroad Migration & Europe Consult Pvt. Ltd.</title>
 
   <!-- bootstrap core css -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -30,7 +30,7 @@
   <link href="css/responsive.css" rel="stylesheet" />
 </head>
 
-<body class="sub_page">
+<body>
   <div class="hero_area">
     <!-- header section strats -->
     <div class="hero_bg_box">
@@ -46,19 +46,19 @@
             <a href="" class="contact_link1">
               <i class="fa fa-map-marker" aria-hidden="true"></i>
               <span>
-                Lorem ipsum dolor sit amet,
+                Maitighar Mandala Height <br> Kathmandu, Nepal
               </span>
             </a>
             <a href="" class="contact_link2">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-                Call : +01 1234567890
+                Call : 01-5220178
               </span>
             </a>
             <a href="" class="contact_link3">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>
-                demo@gmail.com
+                migrationtoabroad@gmail.com
               </span>
             </a>
           </div>
@@ -69,7 +69,7 @@
           <nav class="navbar navbar-expand-lg custom_nav-container">
             <a class="navbar-brand" href="index.html">
               <span>
-                Viseas
+                <img src="images/abroad.png" alt="" style="height: 70px; width: 110px;">
               </span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -78,13 +78,13 @@
 
             <div class="collapse navbar-collapse ml-auto" id="navbarSupportedContent">
               <ul class="navbar-nav  ">
-                <li class="nav-item ">
+                <li class="nav-item active">
                   <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="service.html"> Services </a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                   <a class="nav-link" href="about.html"> About</a>
                 </li>
                 <li class="nav-item">
@@ -93,6 +93,9 @@
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html">Contact us</a>
                 </li>
+                <li class="nav-item" style="background-color: #071a52; border-radius: 3px;">
+                  <a class="nav-link" href="contact.html" >Apply Now</a>
+                </li>
               </ul>
             </div>
           </nav>
@@ -100,8 +103,6 @@
       </div>
     </header>
     <!-- end header section -->
-  </div>
-
   <!-- about section -->
 
   <section class="about_section layout_padding">
@@ -149,11 +150,11 @@
           <div class="info_logo">
             <a class="navbar-brand" href="index.html">
               <span>
-                Viseas
+                <img src="images/abroad.png" alt="" style="height: 70px; width: 110px;">
               </span>
             </a>
             <p>
-              Dolor sit amet, consectetur magna aliqua. Ut enim ad minim veniam, quisdotempor incididunt r
+              We Guide you to the Right Path,
             </p>
           </div>
         </div>
@@ -165,22 +166,22 @@
             <ul>
               <li>
                 <a href="">
-                  Dolor sit amet, consectetur
+                  FB: Abroad Migration and Europe Consult Pvt. Ltd.
                 </a>
               </li>
               <li>
                 <a href="">
-                  Magna aliqua. Ut enim ad
+                  Whatsapp: AbroadMigration
                 </a>
               </li>
               <li>
                 <a href="">
-                  Minim veniam
+                  Instagram: AbroadMigration
                 </a>
               </li>
               <li>
                 <a href="">
-                  Quisdotempor incididunt r
+                  Twitter: AbroadMigration
                 </a>
               </li>
             </ul>
@@ -196,19 +197,19 @@
             <a href="" class="">
               <i class="fa fa-map-marker" aria-hidden="true"></i>
               <span>
-                Lorem ipsum dolor sit amet,
+                Maitighar Mandala Height, <br>Kathmandu, Nepal
               </span>
             </a>
             <a href="" class="">
               <i class="fa fa-phone" aria-hidden="true"></i>
               <span>
-                Call : +01 1234567890
+                Call : 01-520179
               </span>
             </a>
             <a href="" class="">
               <i class="fa fa-envelope" aria-hidden="true"></i>
               <span>
-                demo@gmail.com
+                migrationtoabroad@gmail.com
               </span>
             </a>
           </div>
